--- a/services/Silky.Position/src/Silky.Position.Domain/Silky.Position.Domain.csproj
+++ b/services/Silky.Position/src/Silky.Position.Domain/Silky.Position.Domain.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\Common\Silky.Hero.Common.EntityFrameworkCore\Silky.Hero.Common.EntityFrameworkCore.csproj" />
         <ProjectReference Include="..\..\..\Silky.Identity\src\Silky.Identity.Application.Contracts\Silky.Identity.Application.Contracts.csproj" />
+        <ProjectReference Include="..\..\..\Silky.Organization\src\Silky.Organization.Application.Contracts\Silky.Organization.Application.Contracts.csproj" />
         <ProjectReference Include="..\Silky.Position.Application.Contracts\Silky.Position.Application.Contracts.csproj" />
         <ProjectReference Include="..\Silky.Position.Domain.Shared\Silky.Position.Domain.Shared.csproj" />
     </ItemGroup>
